--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             REDIS_URL: 'redis://redis:6379/'
             PUPPETEER_WS_ENDPOINT: 'ws://browserless:3000'  # marked
             PROXY_URI: 'socks5h://warp-socks:9091'
+            GITHUB_ACCESS_TOKEN: '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'
         depends_on:
             - redis
             - browserless  # marked
